--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "babel-preset-env": "^1.6.0",
     "caniuse-lite": "^1.0.30000760",
     "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
@@ -32,8 +39,5 @@
     "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.0"
   },
-  "dependencies": {
-    "phaser": "^2.6.2",
-    "phaser-ce": "^2.9.2"
-  }
+  "dependencies": {}
 }
